# base

./: .dockerignore  .gitignore  Dockerfile  README.md
code/: app.py  chat_util.py  pyproject.toml  run.sh  start.sh  util.py
code/docker/: decorators.py
code/static/: client-script.js  main.js
code/templates/: client.html
